<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="select_app_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="build_it_bigger_preview">This button will launch Build it Bigger!</string>
    <string name="spotify_streamer_preview">This button will launch Spotify Streamer!</string>
    <string name="scores_app_preview">This button will launch Scores App!</string>
    <string name="library_app_preview">This button will launch Library App!</string>
    <string name="xyz_reader_preview">This button will launch XYZ Reader!</string>
    <string name="my_own_app_preview">This button will launch my Capstone App!</string>
</resources>
