<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightBlue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.AppSelectActivity"
    tools:showIn="@layout/activity_app_select">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_app_title"
        android:textColor="@color/lightBlack"
        android:padding="20dp"
        android:textSize="25dp"
        />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/spotify_streamer_btn"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center"
        android:text="@string/spotify_streamer"
        android:textSize="18dp" />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/scores_app_btn"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center"
        android:text="@string/scores_app"
        android:textSize="18dp" />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/library_app_btn"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center"
        android:text="@string/library_app"
        android:textSize="18dp" />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/build_it_bigger_btn"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center"
        android:text="@string/build_it_bigger"
        android:textSize="18dp" />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/xyz_reader_btn"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center"
        android:text="@string/xyz_reader"
        android:textSize="18dp" />
    <Button
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:id="@+id/my_own_app_btn"
        android:backgroundTint="@color/red"
        android:layout_gravity="center"
        android:text="@string/my_own_app"
        android:textColor="@color/white"
        android:textSize="18dp" />
</LinearLayout>
